# algorithms_2nd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-tidy-review.yaml
additional_tasks/contest/: A.cpp  B.cpp  C.cpp  D.solution  E.solution
additional_tasks/graph_view/: README.md
additional_tasks/template_task/: CMakeLists.txt  README.md
additional_tasks/template_task/src/: main.cpp  prim.cpp  prim.hpp  test.cpp  utils.cpp  utils.hpp
doc/: Paragraph_1.md  Paragraph_2.md  Paragraph_5.md  Part1.md  Part2.md  Part3.md  Part4.md  Part5.md  Part6.md  README.md  Theory.html  Theory.md  theory.md
lib/src/: graph.cpp  graph.hpp  tree.cpp  tree.hpp  util.cpp  util.hpp  utils.hpp  weight_graph.cpp  weight_graph.hpp
own_tasks/antenna/: statement.md
own_tasks/usual_task/: statement.md
sandbox/template/: CMakeLists.txt
task_01/src/: main.cpp  test.cpp  topology_sort.cpp  topology_sort.hpp
task_02/src/: AllFunc.cpp  AllFunc.hpp  Articulation_points_and_Bridge_Finder.cpp  FindBridges.cpp  FindBridges.hpp  FindCutPoints.cpp  FindCutPoints.hpp  bridge_search.cpp  bridges_and_cutpoints.cpp  bridges_and_cutpoints.hpp  bridges_and_joints.cpp  bridges_and_joints.hpp  connected_graph.cpp  connected_graph.hpp  dot_search.cpp  graph.cpp  graph.hpp  main.cpp  net.cpp  net.hpp  search.cpp  search.hpp  search_bridges_and_vertices.hpp  special_points.cpp  special_points.hpp  task.hpp  task2.cpp  task2.hpp  test.cpp
task_03/: CMakeLists.txt  README.md
task_03/src/: Deijkstra.cpp  Deijkstra.hpp  Johnson.cpp  Johnson.hpp  (+18 more)
task_05/: CMakeLists.txt  README.md
(+102 files in other folders)
